--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 database {
-  uri = "jdbc:sqlserver://localhost"
+  url = "jdbc:sqlserver://localhost"
   user = "backend"
   password = "backendpassword"
 }
